fix bugs all
