# api.yaml
@@ -5,7 +5,7 @@ info:
   version: 1.0.0
 servers:
   - url: https://asvatok.onrender.com
-  - url: http://localhost:4209
+  - url: http://localhost:4000
     description: Main server
 components:
   securitySchemes:
@@ -221,14 +221,14 @@ paths:
                    type: string
                    minLength: 1
                    description: Wallet.
-                 image:
+                 pic:
                   type: string
                   format: 1
                   description: profile pic.
                required:
                  - aboutMe
                  - wallet
-                 - image
+                 - pic
       security:
        - BearerAuth: []
       responses:
@@ -262,7 +262,7 @@ paths:
                    type: string
                    minLength: 1
                    description: Wallet.
-                 image:
+                 pic:
                   type: string
                   format: 1
                   description: profile pic.
@@ -270,7 +270,7 @@ paths:
                  - id
                  - aboutMe
                  - wallet
-                 - image
+                 - pic
       security:
        - BearerAuth: []
       responses:
@@ -281,7 +281,7 @@ paths:
         '500':
          description: Internal Server Error OR authorization header must be provided.
 
-  /api/v1/member/getprofile:
+  /api/v1/member/get_profile:
     post:
       summary: Return profile.
       tags:
@@ -338,6 +338,9 @@ paths:
                 sku_code: 
                   type: string
                   description: SKU code
+                cover_pic:
+                  type: string
+                  description: cover picture of product
                 name: 
                   type: string
                   description: Product name
@@ -410,7 +413,7 @@ paths:
                 keyword: 
                   type: string
                   description: Keyword
-                images: 
+                img: 
                   type: array
                   description: Array of image URLs
                   items:
